--- a/firewall.tf.example
+++ b/firewall.tf.example
@@ -1,11 +1,12 @@
-module "allow" {
-  source= "./module/firewall"
+module "firewall" {
+  source  = "./modules/firewall"
+
+  network = "default"
 
   allow = {
     "ingress" = [
       {
         name          = "allow-web"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target  = {
@@ -18,7 +19,6 @@ module "allow" {
       },
       {
         name          = "default-allow-http"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target = {
@@ -30,7 +30,6 @@ module "allow" {
       },
       {
         name          = "default-allow-https"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target = {
@@ -42,7 +41,6 @@ module "allow" {
       },
       {
         name          = "default-allow-icmp"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target = {
@@ -54,7 +52,6 @@ module "allow" {
       },
       {
         name          = "default-allow-internal"
-        network       = "default"
         description   = ""
         source_ranges = ["10.128.0.0/9"]
         target = {
@@ -68,7 +65,6 @@ module "allow" {
       },
       {
         name          = "default-allow-rdp"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target = {
@@ -80,7 +76,6 @@ module "allow" {
       },
       {
         name          = "default-allow-ssh"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target = {
@@ -94,16 +89,11 @@ module "allow" {
     egress = [
     ]
   }
-}
-
-module "deny" {
-  source = "./module/firewall"
 
   deny = {
     ingress = [
       {
         name          = "deny-all"
-        network       = "default"
         description   = ""
         source_ranges = ["0.0.0.0/0"]
         target = {
